# privacy-evaluator

./: Dockerfile  README.md  pipeline.sh  temp.csv
.github/workflows/: clean-up-old-packages.yml  preprocessing-docker.yaml  privacy_evaluation_docker.yml
generaldel/: hw.csv  privacy.csv  privacy_toy.csv  result.txt
preprocessing_component/: Cargo.toml  run.sh
preprocessing_component/kubernetes/: preprocess-privacy-eval-deployment.yaml  preprocess-privacy-eval-service.yaml
preprocessing_component/src/: main.rs  preprocessing.rs  structs.rs
privacy_evaluation_component/: Cargo.toml  Dockerfile  run.sh
privacy_evaluation_component/kubernetes/: privacy-eval-deployment.yaml  privacy-eval-service.yaml
privacy_evaluation_component/src/: io_http.rs  main.rs  structs.rs
src/: main.rs  privacy.rs  structs.rs
srcdel/: preprocessing.rs
