[package]
name = "marshal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
libm = "*"
kdam = "*"
#tch = "0.11.0"
#proj = "0.27.0"
itertools = "0.10.5"
polars = { version = "0.33.2", features = ["lazy","ndarray","is_in","describe"] }
ndarray = "0.15"
chrono = "0.4.31"
reqwest = {version = "0.11.22", features = ["blocking"]}
openssl = { version = "0.10", features = ["vendored"] }

[release]
opt-level = 3

[target.stable-aarch64-unknown-linux-gnu]
rustflags = [
    "-C", "linker=gcc-12",
]
